# Anubis

./: .aliases  .dot.install  .dot.load  .editorconfig  .exports  .functions  .gitconfig  .gitconfig-personal-space  .gitconfig-work-space  .gitignore  .gitmodules  .kubectl_aliases  .my.cnf  .profile  .screenrc  .taskrc  .td.md  .todo.md  .travis.yml  .zshrc  LICENSE.md  LICENSE.md.gpg  Makefile  README.md  SECURITY.md  Ubuntu.md  anubis  bootstrap.sh  brew.sh  commit_convention.yml  dot.yml  env.sh  extra.sh  kemet  radar.json  requirements.freeze.txt  requirements.txt  setup.yml  tdo.md  tech_radar.json  (+3 more)
ack/: recipe.yml
ansible/: install  install.sh  recipe.yml
apes/: install
arduino/: install  install.sh
asciinema/: recipe.yml
aws/: install  recipe.yml
base/: recipe.yml
bat/: recipe.yml
bazel/: install  install.sh  recipe.yml
buildkit/: recipe.yml
caddy/: recipe.yml
cheat/: recipe.yml
composer/: install  install.sh
configs/: aliases.j2  anubis.j2  bash_profile.j2  config_global.json.j2  exports.j2  functions.j2  gitconfig-personal.j2  gitconfig-work.j2  gitconfig.j2  gitignore.j2  hello.j2  kemet.j2  macos.j2  my.cnf.j2  recipe.yml  screenrc.j2  secrets.j2  vimrc.j2  zshrc.j2
consul/: install  recipe.yml
copier/: recipe.yml
cowsay/: recipe.yml
curl/: recipe.yml
cursor_ai/: recipe.yml
dmg/: chrome  go  iterm2  sublime  vscode  zsh
docker/: Dockerfile.kernel  Makefile  README.md  recipe.yml  tpl.hub.pkrvars.hcl  tpl.hub.pkrvars.json
docs/: .gitignore  404.html  DNS  (+6 more)
kmt/: CONTRIBUTING.md  Cargo.toml  Makefile
kmt/src/: main.rs
(+544 files in other folders)
