[package]
name = "kmt"
version = "0.1.0"
authors = ["Clivern <hello@clivern.com>"]
edition = "2021"
description = "Workspace Productivity Booster in Rust"
license = "MIT"
repository = "https://github.com/Clivern/kmt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.18"
home = "0.5.9"
inquire = "0.6.2"
serde = "1.0.196"
serde_json = "1.0.113"
serde_with = "3.6.0"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
